# LuminaSend

./: .env.example  .gitignore  .prettierignore  .vercelignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  environments.toml  package-lock.json  package.json  scaffold.yml  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: .env.example  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: LuminaLogo.tsx  SavingsModal.tsx  SendModal.tsx
app/src/contexts/: WalletContext.ts
app/src/lib/: config.ts  savings.ts  stellar.ts
app/src/pages/: Dashboard.tsx  DashboardRoute.tsx  Landing.tsx
app/src/providers/: WalletProvider.tsx
contracts/savings-vault/: Cargo.toml
contracts/savings-vault/src/: lib.rs  test.rs
